# ecocar_navigation_system

autonomous-ecocar/: autopilot_template.conf  brake_system.ini  install.sh  just_logging.conf  pressure_measurements  steering_system.ini  usb_file_test
autonomous-ecocar/Desktop/: Dependencies.txt  Launch Learning.desktop  Launch Remote Autonomy.desktop  Launch Simple Autonomy.desktop  Logging Mode.desktop  Notes.txt  Switch Modem.desktop  Test AUT Drive.desktop  Test Logging.desktop  Test Logging.desktop.save  USB.txt  camera commands.txt
autonomous-ecocar/Scripts/: Closed Loop Autonomy.desktop  Remote Server.desktop  Start Streaming.DESKTOP  Touchscreen Calibration.desktop  autostart.sh  calibrate_brake.sh  calibrate_steering.sh  launch_closed_loop_autonomy.sh  launch_full_autonomy.sh  launch_learning_mode.sh  launch_logging.sh  launch_logging2.sh  launch_piksi_console.sh  launch_remote_autonomy.sh  launch_sensor_logging.sh  launch_simple_autonomy.sh  launch_test_drive.sh  launch_touchscreen_calibration.sh  register_ip.sh  register_local_ip.sh  switch_modem_mode.sh
autonomous-ecocar/Source/Linux/SerialTest/: CMakeCache.txt  CMakeLists.txt  Makefile  SerialTest  cmake_install.cmake  main.cpp  serial_tools.h
autonomous-ecocar/catkin_ws/: steeringtest.sh
autonomous-ecocar/catkin_ws/src/auto_navi/: CMakeLists.txt  package.xml
autonomous-ecocar/catkin_ws/src/auto_navi/msg/: commandMsg.msg  emergencyMsg.msg  flagMsg.msg  motorMsg.msg
autonomous-ecocar/catkin_ws/src/auto_navi/src/: braketester.cpp  drivemaster.cpp  drivepoint_test.cpp  follow_barrier.cpp  gammel_voronoi_node.txt  gates_run.cpp  linedrive.cpp  mission_control.cpp  motor_node.cpp  motornode before para-thing.txt  parking_node.cpp  voronoi_node.cpp
autonomous-ecocar/catkin_ws/src/camera_package/: CMakeLists.txt  package.xml
autonomous-ecocar/catkin_ws/src/camera_package/src/: image_capturing.cpp  settings_test.cpp
autonomous-ecocar/catkin_ws/src/lidar_package/: CMakeLists.txt
autonomous-ecocar/catkin_ws/src/lidar_package/include/lidar_package/: CONSTANTS.h  obstacle_tracker.cpp  obstacle_tracker.h  point_handler.cpp  point_handler.h  point_plotter.cpp  point_plotter.h  scan_struct.h  vlp16_importer.cpp  vlp16_importer.h
autonomous-ecocar/catkin_ws/src/lidar_package/include/lidar_package/classes/: Extreme.cpp  Extreme.h  Gate.cpp  Gate.h  GateTracker.cpp  GateTracker.h  Hull.cpp  Hull.h  MovingAverage.h  ObstacleHull.cpp  ObstacleHull.h  Odometry.cpp  Odometry.h  Plane.cpp  Plane.h  Point.cpp  Point.h  TrackedGate.cpp  TrackedGate.h
autonomous-ecocar/catkin_ws/src/lidar_package/launch/: testlaunch.launch
autonomous-ecocar/catkin_ws/src/lidar_package/msg/: cloud.msg  cloudsAndPlane.msg  gate.msg  gates.msg  obst.msg  obsts.msg
autonomous-ecocar/catkin_ws/src/lidar_package/src/: gate_classifier.cpp  vlp16_graph_test.cpp  vlp16_hull_test.cpp  vlp16_obst_detection.cpp  vlp16_sim_obst_detection.cpp  vlp16_testing.cpp
autonomous-ecocar/catkin_ws/src/steering_node/: CMakeLists.txt  package.xml
autonomous-ecocar/catkin_ws/src/steering_node/include/: CUSUM.cpp  CUSUM.h  FilteredDerivative.cpp  FilteredDerivative.h  SteeringSystem.cpp  SteeringSystem.h
autonomous-ecocar/catkin_ws/src/steering_node/src/: steering_node.cpp
autonomous-ecocar/catkin_ws_sim/: Ecocar.perspective  Ecocar_template.perspective  README  frames.gv  sim.sh
autonomous-ecocar/catkin_ws_sim/src/ecocar_demo/: CMakeLists.txt
autonomous-ecocar/catkin_ws_sim/src/ecocar_demo/src/: ecocar_demo.cpp
autonomous-ecocar/catkin_ws_sim/src/ecocar_gazebo/: CMakeLists.txt
autonomous-ecocar/catkin_ws_sim/src/ecocar_gazebo/include/: derivative_estimator.cpp  derivative_estimator.h
autonomous-ecocar/catkin_ws_sim/src/ecocar_gazebo/launch/: autonomous.launch  autonomous_map.launch  challenge1.launch  challenge1_london.launch  challenge2.launch  challenge3.launch  challenge4.launch  drivepoint_test.launch  ecocar.launch  ecocar_base.launch  export_video.launch  gmapping_world.launch  model.launch
autonomous-ecocar/catkin_ws_sim/src/ecocar_gazebo/models/challenge2_box/: model.config  model.sdf
autonomous-ecocar/catkin_ws_sim/src/ecocar_gazebo/models/challenge4_gate/: model.config  model.sdf
autonomous-ecocar/catkin_ws_sim/src/ecocar_gazebo/models/gray_barrier/: model.config  model.sdf
autonomous-ecocar/catkin_ws_sim/src/ecocar_gazebo/models/parking_box/: model.config  model.sdf
autonomous-ecocar/catkin_ws_sim/src/ecocar_gazebo/models/red_barrier/: model.config  model.sdf  model_dyn.sdf
autonomous-ecocar/catkin_ws_sim/src/ecocar_gazebo/models/red_barrier/meshes/: barrier.stl
autonomous-ecocar/catkin_ws_sim/src/ecocar_gazebo/models/road_markers/: model.config  model.sdf
autonomous-ecocar/catkin_ws_sim/src/ecocar_gazebo/models/road_markers/materials/scripts/: bonus_square.material  tape.material
autonomous-ecocar/catkin_ws_sim/src/ecocar_gazebo/msg/: Control.msg  MotorData.msg
autonomous-ecocar/catkin_ws_sim/src/ecocar_gazebo/plugins/: Drag.cpp  Drag.h  EcocarPlugin.cpp  EcocarPlugin.h  Motor.cpp  Motor.h  RoadMarkerPlugin.cpp  RoadMarkerPlugin.h  TrackPlugin.cpp  TrackPlugin.h
autonomous-ecocar/catkin_ws_sim/src/ecocar_gazebo/rviz/: config.rviz
autonomous-ecocar/catkin_ws_sim/src/ecocar_gazebo/scripts/: generateTrackPoints.py
autonomous-ecocar/catkin_ws_sim/src/ecocar_gazebo/src/: test_steering.cpp  topic_organizer.cpp
autonomous-ecocar/catkin_ws_sim/src/ecocar_gazebo/worlds/: barriers_one_side_example.world  challenge2.world  challenge3.world  challenge4.world  ecocar.world  ecocar_old.world  london_track_flat.world  proto.world  straight.world
costmap/: CMakeLists.txt  costmap_plugins.xml  package.xml
costmap/plugin/: obstacleMapLayer.cpp  staticMapLayer.cpp
costmap/src/: costLayer_base.cpp  costLayer_manager.cpp  costmapLayer.cpp  costmap_base.cpp  costmap_node.cpp  costmap_system.cpp  (+1 more)
costmap_2d/: CMakeLists.txt
costmap_2d_lattice/: CMakeLists.txt  costmap_plugins.xml
ros_miniproj/: cube_spawn.py  cube_spawn_backup.py  moveit_miniproj.launch  moveit_pick_cube.py
source_code/: CMakeLists.txt
(+383 files in other folders)
